# Zeus

./: .gitignore  .gitmodules  CMakeLists.txt  Definitions.lua  README.md  Zeus.code-workspace  Zeus.sln  clean.sh  premake5.lua  run.bat  run.sh
.cache/clangd/index/: Components.h.38E0C5A29509B007.idx  _fixes.hpp.832B3E8C9AE40BA3.idx  _vectorize.hpp.632E4DC5424F82EF.idx  application.cpp.564A0EE7CA6F9847.idx  application.h.D475057903876515.idx  axe.cpp.76B44969D1723E45.idx  binary_to_compressed_c.cpp.AC7614EDCE24F7EC.idx  body.cpp.2C880C03CA8CB935.idx  body.h.C609EFA721DFDCD0.idx  camera.cpp.5F521E9BCFE08853.idx  camera.h.23D0BC32B403A532.idx  character.cpp.1E83E84B4C7F2331.idx  character.h.F8857C79EC403A52.idx  common.hpp.F1026841C9DB50D4.idx  compute_common.hpp.36B87C2A977CFEFB.idx  compute_vector_relational.hpp.03BD2F6634783312.idx  constants.hpp.93BF4441AE701CEA.idx  constants.inl.C6EEDFEA000FD7CC.idx  context.c.1E04C5B8655C164A.idx  core.h.24D09B452C727202.idx  corepch.cpp.CE7D76AD5C9E445C.idx  corepch.h.2408E12032731508.idx  debugger.cpp.1D13C9E4C4B6C8C7.idx  debugger.h.C6DCD4EFE5115581.idx  dual_quaternion.hpp.8DE2C6275E8C7548.idx  dual_quaternion.inl.BE59045AA8C639DC.idx  egl_context.c.1F33CB18C594CD14.idx  enemy.cpp.2FA11F53BDF28188.idx  enemy.h.40E2E7A905562835.idx  enemy_registry.cpp.90935A3CA3883941.idx  enemy_registry.h.697AD102194F6069.idx  epsilon.hpp.A57E2C56D7D798E4.idx  epsilon.inl.7DD6F085C7474AA4.idx  event.cpp.39E10D8CB124745D.idx  event.h.A6062D107222FAB9.idx  exponential.hpp.8375F488B0BB903E.idx  framebuffer.cpp.BBE52BAF8D7189A2.idx  framebuffer.h.B79D47A5CFB57F1B.idx  func_common.inl.19741FC8E41D088D.idx  func_exponential.inl.23A7FFF14A821E19.idx  (+291 more)
Engine/: CMakeLists.txt  Engine - Copy.vcxproj  Engine.vcxproj  Engine.vcxproj - Copy.filters  Engine.vcxproj.filters  corepch.h
Engine/dependency/glfw/: CONTRIBUTORS.md
Engine/dependency/glfw/include/GLFW/: glfw3.h
Engine/dependency/glfw/src/: wl_init.c  wl_window.c  x11_init.c  x11_window.c
Engine/src/: application.cpp  application.h  core.h  gl.cpp  layer.cpp  layer.h  layer_queue.cpp  layer_queue.h
Engine/src/ecs/: Components.h
Engine/src/event/: event.cpp  event.h  key_event.cpp  key_event.h  mouse_event.cpp  mouse_event.h  window_event.cpp
Engine/src/include/: zeus.h
Engine/src/renderer/: framebuffer.cpp  framebuffer.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer_constants.h  shader.cpp  shader.h
Engine/src/renderer/opengl/: debugger.cpp  debugger.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_renderer.cpp  opengl_renderer.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h
Engine/src/util/: camera.cpp  camera.h  imgui_ui.cpp  imgui_ui.h  level_manager.cpp  level_manager.h  logger.cpp  logger.h  random.cpp  random.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h
Engine/src/util/ecs/: component.h  ecs.cpp  ecs.h
Engine/src/utils/: texture.cpp  texture.h
Engine/src/window/: input.cpp  input.h  window.cpp  window.h  window_constants.h  windows_window.cpp  windows_window.h
Phyzics/: CMakeLists.txt  premake5.lua
Phyzics/src/: phyzics.cpp  phyzics.h
Phyzics/src/bodies/: body.cpp  body.h  circle.cpp  quad.cpp
Phyzics/src/include/: phyzicsall.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini  premake5.lua
Sandbox/assets/levels/: level.data  level1.data  testlevel - Copy.data  testlevel.data
Sandbox/assets/shaders/: line_fragment_shader.glsl  line_vertex_shader.glsl  quad_fragment_shader.glsl  quad_vertex_shader.glsl
Sandbox/src/: engine_layer.h  sandbox.cpp  sandbox.h  sandbox_layer.h  sandbox_level.h  untitled.cpp
SimpleGame/: CMakeLists.txt  SimpleGame.vcxproj  SimpleGame.vcxproj.filters  imgui.ini  premake5.lua
SimpleGame/assets/levels/: backup_level1.data  level.data  level1.data  level1.data.bck
SimpleGame/assets/shaders/: quad_vertex_shader.glsl
SimpleGame/src/: game_layer.cpp  game_layer.h  game_level.cpp  game_level.h  main.cpp  sprite.h
SimpleGame/src/character/: character.cpp  character.h  enemy.cpp  enemy.h  enemy_registry.cpp  enemy_registry.h  player.cpp  player.h
SimpleGame/src/weapon/: axe.cpp  gun.cpp  sword.cpp  weapon.h
Zeus/: premake5.lua
Zeus/src/: application.cpp  application.h
Zeus/src/event/: event.h
Zeus/src/include/: zeus.h
Zeus/src/renderer/: render_command.cpp  render_command.h  renderer.cpp  renderer.h  shader.h
Zeus/src/util/: camera.cpp  imgui_ui.cpp  imgui_ui.h  level_manager.cpp  level_manager.h  logger.cpp
ZeusNavigator/: premake5.lua
ZeusNavigator/src/: main.cpp
bck.vscode/: settings.json
dependency/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
dependency/glfw/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  cmake_install.cmake  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
dependency/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  update_mappings.vcxproj  update_mappings.vcxproj.filters
dependency/glfw/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cmake_install.cmake  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  inputlag.vcxproj  inputlag.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  (+19 more)
(+4 files in other folders)
